# unsupervised-aging

./: .gitignore  .gitmodules  README.md  metadata.csv  pyproject.toml
data/: 2025-06-26_kpms-v0_unsupervised-xcats.json  2025-06-28_kpms-v1_supervised-unsupervised-features.csv  2025-06-28_kpms-v1_supervised-unsupervised-xcats.json
final_data_curation/: 2025-01-28_b6_15.csv  2025-01-28_do_15.csv  2025-03-10_b6-do_frailty.csv  2025-11-03_missing-paths.txt  2025-11-03_missing-paths_parsed.txt  2025-12-03_deduped-ds.csv  2025-12-03_missing-paths_corrected.txt  2025-12-04_B6-registry.csv  2025-12-04_DO-registry.csv  2025-12-04_combined-registry.csv  2025-12-04_combined-registry_missing.csv  2025-12-04_deduped-result-h5-groups__2025-07-03_kpms-v2__2025-07-07_model-2.txt  2025-12-04_deduped-result-h5-groups__2025-07-16_kpms-v3__2025-07-16_model-4.txt  2025-12-04_deduped-result-h5-groups__2025-09-20_kpms-v5_150_6__2025-09-21_model-1.txt  2025-12-04_ds-1140.csv  2025-12-04_ds-b6-639.csv  2025-12-04_ds-do-492.csv  2025-12-04_final-name-registry.txt  2025-12-04_missing_b6-embedding.csv  2025-12-04_missing_b6-embedding_1.csv  2025-12-04_missing_b6-embedding_2.csv  2025-12-04_missing_b6-embedding_3.csv  2025-12-04_missing_combined-embedding_14.csv  2025-12-04_missing_combined-embedding_18.csv  2025-12-04_missing_combined-embedding_18_final.csv  2025-12-04_missing_combined-embedding_4.csv  2025-12-04_missing_do-embedding.csv  2025-12-04_missing_do-embedding_1.csv  2025-12-04_missing_do-embedding_2.csv  2025-12-30_UA_B6_masterdf.csv  2025-12-30_UA_DO_masterdf.csv  (+16 more)
src/: train_kpms.py  (+6 more)
(+88 files in other folders)
